fix(shop): Path B ensure가 PAID cashDue로 INCOME 금액 수리
confirmPayment 조기 INCOME(stale packagePrice=1000) 억제.
ensure는 posted 합≠cashDue면 cancel+재생성. EXPENSE는 수리 후 INCOME 대칭.

Co-authored-by: beta0629 <beta0629@users.noreply.github.com>